# Exercise_1-

./: .gitignore  CMakeLists.txt  README.md
Exercise_1/: CMakeLists.txt  README.md  main.cpp
Exercise_2/: CMakeLists.txt  README.md  main.cpp
Exercise_3/: CMakeLists.txt  README.md  main.cpp
Exercise_4/: CMakeLists.txt  main.cpp
Exercise_5/: CMakeLists.txt  README.md  main.cpp
