# Minimum required version of CMake
cmake_minimum_required(VERSION 3.10.0)

# Project name
project(Exercises)

# Add subdirectories for each exercise
add_subdirectory(Exercise_1)
add_subdirectory(Exercise_2)
add_subdirectory(Exercise_3)
# add_subdirectory(Exercise_4)



# Path to github of the project: https://github.com/ap-enign/Exercises
